# smm_synthesis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/rviz/: smm_synthesis_config.rviz
config/yaml/: Mscomi0.yaml  assembly.yaml  assembly_6dof.yaml  gsai0.yaml  gsli0.yaml  gspj0.yaml  gst0.yaml  master_test1_default.yaml  q_pj_anat.yaml  xi_ai_anat.yaml  xi_pi_anat.yaml  xi_pj_anat.yaml
config/yaml/3dof/: assembly_3dof.yaml
config/yaml/6dof/: assembly_6dof.yaml  connectivity_6dof.yaml
doc/drawings/: k3d40_zeichnung.avif
launch/: extract_active_twists.launch  extract_frames.launch.py  extract_passive_frames.launch  extract_passive_twists.launch  extract_zero_com.launch  extract_zero_frames.launch  extract_zero_inertia.launch  extract_zero_tcp.launch  master_smm_synthesis.launch  master_synthesis.launch.py  master_synthesis_ndof.launch.py  master_synthesis_ndof_deprecated.launch.py  master_synthesis_with_twists.launch.py  master_test1.launch  robot_visualization.launch  smm_synthesis_visual_debug_only.launch.py  smm_synthesis_viz_ellipsoid_ndof.launch.py  smm_synthesis_viz_kinematic_manipulability_ndof.launch.py  smm_synthesis_viz_tcp_and_kinematic_manipulability_ndof.launch.py  smm_synthesis_viz_tcp_motion_ndof.launch.py  smm_synthesis_viz_twists.launch.py  smm_synthesis_viz_twists_ndof.launch.py  test_smm_synthesis.launch  view_smm_6dof.launch.py
meshes/: H54P-100_M54P-040.stp  H54P-200_M54P-060.stp  PH42-020-S300-R.stp  active_connector_frp54-a110.stl  active_module_fixed.stl  active_module_moving.stl  active_module_no_conn_fixed.stl  massage_circ_assembly.stl  massage_tool.stl  massage_tool_circ_assembly.stl  ovidius_smm_baselink.stl  pjoint1_moveable.stl  pjoint1_static.stl
src/: active_frames_extractor_ndof.cpp  com_extractor_kdl.cpp  com_extractor_kdl_ndof.cpp  frame_extractor_kdl.cpp  inertia_extractor_kdl.cpp  inertia_extractor_kdl_ndof.cpp  passive_frame_extractor_kdl.cpp  passive_frame_extractor_kdl_ndof.cpp  passive_twist_extractor_screws.cpp  passive_twist_extractor_screws_ndof.cpp  pseudo_angle_extractor.cpp  pseudo_angle_extractor_ndof.cpp  structure_digit_setter.cpp  structure_digit_setter_ndof.cpp  tcp_extractor_kdl.cpp  tcp_extractor_kdl_ndof.cpp  temp  twist_extractor_screws.cpp  twist_extractor_screws_ndof.cpp
urdf/: dynamixel_wrist.xacro  modules.xacro  smm_structure_anatomy_assembly.xacro  smm_structure_anatomy_assembly_6dof.xacro  transmissions.xacro
urdf/3dof/: smm_structure_anatomy_assembly_3dof.xacro
urdf/6dof/: smm_structure_anatomy_assembly_6dof.xacro
