<?xml version="1.0"?>
<package format="3">
  <name>smm_synthesis</name>
  <version>0.0.1</version>
  <description>Package for automatic synthesis of SMM robots</description>

  <maintainer email="stravnik.rob@gmail.com">nikos</maintainer>
  <license>TODO</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_index_cpp</depend>

  <!-- Core deps -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- TF / KDL / URDF stack -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>

  <!-- Visualization -->
  <depend>rviz2</depend>
  <depend>visualization_msgs</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>

  <!-- Other libs -->
  <depend>yaml-cpp</depend>
  <depend>smm_screws</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
